Ensure we can toggle the View Secondary on mobile if we desire.

--- a/src/less/views.less
+++ b/src/less/views.less
@@ -40,7 +40,9 @@ div[data-solbit="view-container"] { // View Container
 		}
 
 		& > div[data-solbit="view-secondary"] { // Hide Secondary View
-			display: none;
+			&:not([data-solbit-show]){
+				visibility: hidden;
+			}
 		}
 	}
 
